--- a/no-supervisado/URU/entrenamiento/configs/config_GNN.yaml
+++ b/no-supervisado/URU/entrenamiento/configs/config_GNN.yaml
@@ -1,27 +1,27 @@
-outdir: ../resultados/runs_ploss_final/gnn
+outdir: ../resultados/runs_ploss/gnn
 
 model:
+  arq: "GNN"
   layers: [] # Optuna
   K: [] # Optuna
-  arq: "GNN"
+  dropout: -1 # Optuna
 
 
 data:
-  data_path: /home/iboero/unsup_uru/data/reduru_finalll_secuencial
-  red: 'uru' # 30 o 118
-  red_path: /home/iboero/unsup_uru/data/red_uru_final.p
+  red: 'uru'
+  data_path: ../data/reduru
+  red_path: ../data/red_uru.p
   normalize_X: -1 # Optuna
 
 training:
   device: 'cuda'
-  batch_size: -1 # Optuna
-  lr: -1 # Optuna
   num_epochs: 1500
   early_stopping: 180
   betas: [0.9, 0.999]
-  weight_decay: -1 # Optuna
-  seed: 42
   initial_metric_epoch: 0
-  batch_norm: -1 # Booleano # Optuna
-  dual_coefs: [] # dual_acflow_real, dual_acflow_imag, dual_lines # Optuna
-  loss: "nn"
+  seed: 42
+  batch_size: -1 # Optuna
+  lr: -1 # Optuna
+  weight_decay: -1 # Optuna
+  batch_norm: -1 # Optuna
+  dual_coefs: [] # Optuna
