--- a/no-supervisado/URU/resultados/runs_ploss_sintetica/fcnn/best/config.yaml
+++ b/no-supervisado/URU/resultados/runs_ploss_sintetica/fcnn/best/config.yaml
@@ -12,9 +12,9 @@ model:
   arq: FCNN
   dropout: 0.42743593962964305
 data:
-  data_path: /home/nacho/unsup_uru/data/reduru_sintetica
+  data_path: ../data/reduru_sintetica
   red: uru
-  red_path: /home/nacho/unsup_uru/data/red_uru_final.p
+  red_path: ../data/red_uru.p
   normalize_X: true
 training:
   device: cuda
